--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-item-links.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-item-links.html
@@ -21,7 +21,7 @@
             behaviors : [ AlexandriaBehaviors.StampBehavior ],
 
             _navigateItem : function(e) {
-                this.fire("navigate-item", e.detail.item);
+                this.fire("navigate-item", e.detail.item.name);
             }
         });
     </script>
