--- a/alexandria/ui-elements/src/widgets/alexandria-panel.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-panel.html
@@ -141,6 +141,9 @@
             color: black;
             @apply(--alexandria-panel-tab-selected);
         }
+        :host paper-tabs ::content > paper-icon-button {
+            display: none;
+        }
         :host #tabs-content {
             height: calc(100% - 30px);
             overflow: auto;
@@ -199,7 +202,14 @@
         :host iron-pages.right_fixed_true {
             width: var(--alexandria-panel-view-fixed-width, calc(100% - 150px));
         }
-        @media screen and (max-width: 736px) {
+        @media screen and (max-width: 1024px) {
+            :host paper-tabs ::content > paper-icon-button {
+                color: var(--default-primary-color);
+                opacity: 1;
+                display: block;
+            }
+        }
+        @media screen and (max-width: 736px), all and (min-width: 600px) and (orientation: portrait) {
             :host cotton-breadcrumbs {
                 margin-left: 30px;
                 margin-top: -3px;
