--- a/alexandria/ui-elements/src/widgets/alexandria-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-catalog.html
@@ -124,11 +124,13 @@
             border-radius: 30px;
             height: 31px;
             margin-top: 7px;
+            @apply(--alexandria-catalog-breadcrumbs-button);
         }
         :host .breadcrumbs paper-button:hover {
             background: #388e3b;
             opacity: 0.9;
             color: white;
+            @apply(--alexandria-catalog-breadcrumbs-button-hover);
         }
         :host cotton-breadcrumbs {
             display: block;
