fix bug loading filters

--- a/alexandria/ui-elements/src/widgets/alexandria-panel.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-panel.html
@@ -145,7 +145,7 @@
             display: none;
         }
         :host #tabs-content {
-            height: calc(100% - 30px);
+            height: 100%;
             overflow: auto;
             @apply(--alexandria-panel-tabs-content);
         }
