--- a/alexandria/ui-elements/src/widgets/_common/mold/alexandria-mold-stamps.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/alexandria-mold-stamps.html
@@ -1,3 +1,6 @@
+<script src="../../../../lib/highcharts/highcharts.js"></script>
+<script src="../../../../lib/highcharts/highcharts-more.js"></script>
+
 <link rel="import" href="stamps/alexandria-stamp-breadcrumbs.html">
 <link rel="import" href="stamps/alexandria-stamp-card-wallet.html">
 <link rel="import" href="stamps/alexandria-stamp-timeline.html">
