--- a/alexandria/ui-elements/src/widgets/alexandria-temporal-range-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-temporal-range-catalog.html
@@ -25,10 +25,13 @@
         <h3 hidden$="[[!_showLabel]]">[[_catalog.label]]</h3>
         <cotton-breadcrumbs items="[[_breadcrumbs]]" on-item-selected="_navigate" hidden$="[[!_breadcrumbs.length]]"></cotton-breadcrumbs>
         <div id="main" class$="layout horizontal filtered_[[_filtered]] embedded_[[_catalog.embedded]]">
-            <alexandria-catalog-grouping-list id="embeddedGroupings" hidden="[[_hideGroupings]]"
-                                              histograms-mode="[[_catalog.arrangementHistogramsMode]]"
-                                              grouping-list="[[_catalog.groupingList]]"
-                                              on-grouping-selection-change="_handleGroupingChange"></alexandria-catalog-grouping-list>
+            <template is="dom-if" if="[[_groupingsLeft]]">
+                <alexandria-catalog-grouping-list class="left" id="embeddedGroupings" hidden="[[_hideGroupings]]"
+                                                  histograms-mode="[[_catalog.arrangementHistogramsMode]]"
+                                                  grouping-list="[[_catalog.groupingList]]"
+                                                  on-grouping-selection-change="_handleGroupingChange"
+                                                  on-delete-grouping-group="_handleDeleteGroupingGroup"></alexandria-catalog-grouping-list>
+            </template>
             <div class$="main flex [[_navigatorLayout]]">
                 <alexandria-catalog-grouping-list-summary grouping-list="[[_catalog.groupingList]]"
                                                           on-grouping-selection-change="_handleGroupingChange"></alexandria-catalog-grouping-list-summary>
@@ -36,6 +39,13 @@
                 <cotton-zombie display="AlexandriaCatalogViewList" widget="AlexandriaCatalogViewList"></cotton-zombie>
                 <cotton-zombie id="navigator" display="AlexandriaTimeRangeNavigator" widget$="Alexandria[[_navigatorLayout]]TimeRangeNavigator" object$="[[display.id]]"></cotton-zombie>
             </div>
+            <template is="dom-if" if="[[!_groupingsLeft]]">
+                <alexandria-catalog-grouping-list class="right" id="embeddedGroupings" hidden="[[_hideGroupings]]"
+                                                  histograms-mode="[[_catalog.arrangementHistogramsMode]]"
+                                                  grouping-list="[[_catalog.groupingList]]"
+                                                  on-grouping-selection-change="_handleGroupingChange"
+                                                  on-delete-grouping-group="_handleDeleteGroupingGroup"></alexandria-catalog-grouping-list>
+            </template>
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
         <cotton-zombie display="AlexandriaDialogBox" widget="AlexandriaDialogBox"></cotton-zombie>
@@ -79,6 +89,12 @@
         :host .filtered_true alexandria-catalog-view-list,
         :host .filtered_true .main.Vertical alexandria-vertical-time-range-navigator {
             background: #ffffef;
+        }
+        :host alexandria-catalog-grouping-list.left {
+            border-right: 1px solid #ddd;
+        }
+        :host alexandria-catalog-grouping-list.right {
+            border-left: 1px solid #ddd;
         }
         :host .clear, :host .main alexandria-catalog-grouping-list-summary {
             position: static;
