alexandria-ui: fix method call in vertical time navigator

--- a/alexandria/ui-elements/src/widgets/alexandriatimenavigator/alexandria-vertical-time-navigator.html
+++ b/alexandria/ui-elements/src/widgets/alexandriatimenavigator/alexandria-vertical-time-navigator.html
@@ -97,6 +97,9 @@
                 this.$.timeline.scale = this._timelineScale(scale);
             },
 
+            _refreshState : function(state) {
+            },
+
             _refreshDate : function(date) {
                 this.$.timeline.update(date);
             },
