--- a/alexandria/ui-elements/docs.html
+++ b/alexandria/ui-elements/docs.html
@@ -8,13 +8,11 @@
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes"/>
 
         <link rel="icon" href-absolute="$favicon">
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
 	</head>
 
 	<body>
-		<div id="Home"></div>
+		<div id="Docs"></div>
 		<script>
 			document.configuration = {};
 			document.configuration.googleApiKey = "$googleApiKey";
