alexandria-ui: added parallax, image, block as card, openpage as link

--- a/alexandria/ui-elements/docs.html
+++ b/alexandria/ui-elements/docs.html
@@ -9,6 +9,8 @@
 
         <link rel="icon" href-absolute="$favicon">
 
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 	</head>
 
 	<body>
