alexandria-ui: added time consuming facet to molds

--- a/alexandria/ui-elements/widgetType.html
+++ b/alexandria/ui-elements/widgetType.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
 	<head>
         <title>$title</title>
 
@@ -13,8 +13,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 	</head>
 
-	<body>
-		<div id="WidgetType"></div>
+	<body style="height:100%">
+		<div id="WidgetType" style="height:100%"></div>
 		<script>
 			document.configuration = {};
 			document.configuration.googleApiKey = "$googleApiKey";
