--- a/alexandria/ui-elements/home.html
+++ b/alexandria/ui-elements/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
 	<head>
         <title>$title</title>
 
@@ -13,7 +13,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 	</head>
 
-	<body>
+	<body style="height:100%">
 		<div id="Home"></div>
 		<script>
 			document.configuration = {};
