MovvBuilder updates check instant is after last frame

--- a/framework/ui-elements/src/widgets/_common/alexandria-operation-confirm-dialog.html
+++ b/framework/ui-elements/src/widgets/_common/alexandria-operation-confirm-dialog.html
@@ -8,7 +8,7 @@
 
     <template>
         <div id="dialogContainer" class="alexandria-operation-confirm-dialog-0">
-            <paper-dialog id="dialog" no-overlap entry-animation="scale-up-animation" exit-animation="fade-out-animation" on-iron-overlay-closed="_overlayClosed">
+            <paper-dialog id="dialog" no-overlap item-animation="scale-up-animation" exit-animation="fade-out-animation" on-iron-overlay-closed="_overlayClosed">
                 <h2>[[Title]]</h2>
                 <div class="message">[[message]]</div>
                 <div class="buttons">
