--- a/framework/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-open-external-dialog-operation.html
+++ b/framework/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-open-external-dialog-operation.html
@@ -14,7 +14,7 @@
                                       mode="[[stamp.properties.mode]]" color="[[stamp.properties.color]]"
                                       style$="[[_style]]"></alexandria-operation-trigger>
 
-        <paper-dialog id="dialog" entry-animation="scale-up-animation"
+        <paper-dialog id="dialog" item-animation="scale-up-animation"
                       exit-animation="fade-out-animation"
                       on-iron-overlay-opened="_overlayOpened"
                       on-iron-overlay-closed="_overlayClosed"
