--- a/framework/ui-elements/src/widgetType.html
+++ b/framework/ui-elements/src/widgetType.html
@@ -13,9 +13,15 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
         <style>
-            html, body, .page {
-                height: 100%;
-            }
+			html, body {
+				min-height: 100vh;
+				height: 100%;
+			}
+			.page {
+				display: table;
+				height: 100%;
+				width: 100%;
+			}
         </style>
 	</head>
 
